# octofact

./: .gitignore  BUGS.md  CLAUDE.md  Cargo.toml  GAME.md  GAME_PLAN.md  GRAPHICS.md  ITEMS.md  PRD.md  PROGRESS.md  PROGRESS_BELT.md  PROGRESS_BLUE.md  PROGRESS_GFX.md  PROGRESS_KNUTH.md  STATUS.md  THOUGHTS.md  concept.md
.claude/: settings.json
.claude/skills/bugfix/: SKILL.md
.claude/skills/milestone/: SKILL.md
src/: app.rs  main.rs
src/game/: blueprint.rs  config.rs  input.rs  inventory.rs  items.rs  mod.rs  recipes.rs  save.rs  world.rs
src/hyperbolic/: algebraic_tests.rs  cell_graph.rs  cell_id.rs  embedding.rs  knuth_bendix.rs  mod.rs  poincare.rs  rewrite.rs  tiling.rs
src/render/: belt.wgsl  camera.rs  common.wgsl  engine.rs  ghost.wgsl  ghost_topper.wgsl  instances.rs  item.wgsl  machine.wgsl  mesh.rs  mod.rs  pipeline.rs  shader.wgsl  tile.wgsl  topper.wgsl
src/sim/: belt.rs  inserter.rs  machine.rs  mod.rs  power.rs  splitter.rs  storage.rs  tick.rs
src/ui/: blueprint.rs  icons.rs  integration.rs  inventory.rs  keybind.rs  machine.rs  mod.rs  placement.rs  settings.rs  splitter.rs  storage.rs  style.rs  tooltip.rs
